# insomnia

./: README.md  app  com.github.manexim.insomnia.yml  com.manexim.insomnia.yml  meson.build
.github/workflows/: ci.yml  main.yml
data/: com.github.manexim.insomnia.appdata.xml.in  com.github.manexim.insomnia.desktop.in  com.manexim.insomnia.appdata.xml.in  com.manexim.insomnia.desktop.in
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.manexim.insomnia.pot  com.manexim.insomnia.pot  de.po  es.po  fr.po  nl.po  rs.po  ru.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po  nl.po  rs.po  ru.po
src/: Application.vala  Constants.vala.in  Inhibitor.vala  MainWindow.vala  meson.build
